# hpc-test-repo

./: README.md  get_smbc_names.py  pyproject.toml
source/SMBC_parse/: __init__.py  get_smbc_names.py
source/SMBC_parse/tests/: test_get_smbc_names.py
tests/: test_get_smbc_names.py
